Fix "Translate" button being too small when text changes from "Done."

A re-layout of its container is required when the label changes.

Bug: 795717
Change-Id: I42bfd7ceab36a205ff88a4cf74f82cffaaa17407